--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node   ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,10 @@
   },
   "homepage": "https://github.com/siddiqun03/server-side_restaurant#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "graphql": "^15.0.0",
     "apollo-server": "^2.5.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4"
   }
